tests/specs/TypeLiteralDeclaration.txt
# mod.ts
export type T = {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type T = {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

type T = { }


# output.json
[
  {
    "kind": "typeAlias",
    "name": "T",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "typeAliasDef": {
      "tsType": {
        "repr": "",
        "kind": "typeLiteral",
        "typeLiteral": {
          "methods": [],
          "properties": [],
          "callSignatures": [],
          "indexSignatures": []
        }
      },
      "typeParams": []
    }
  }
]
